# deathsync

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
crypt/: Cargo.toml
crypt/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
test/: long.c  payload.rs
