[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crypt = { path = "../crypt" }
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde_json = "1.0.108"
x25519-dalek = {version = "2", features = ["getrandom"]}

