[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypt = { path = "../crypt" }
actix-web = "4"
anyhow = "1.0.75"
hex = "0.4.3"
x25519-dalek = {version = "2", features = ["getrandom"]}
serde = { version = "1.0.193", features = ["derive"] }

